clusters/talos-robbinsdale/apps/hubble-ui/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: hubble-ui
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "hubble.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hubble
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble
  oidc:
    provider:
      issuer: "https://token.actions.githubusercontent.com"
    clientID: "Ov23li7jTibc49JqFUdg"
    clientSecret:
      name: "hubble-oidc"
    redirectURL: "https://hubble.rajsingh.info/oauth2/callback"
    logoutPath: "/logout"
